--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,3 +4,42 @@ include:
     ref: v20250515
     file:
       - /release.gitlab-ci.yml
+
+stages:
+  - lint
+  - test
+  - release
+
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+  GIT_SUBMODULE_DEPTH: 1
+
+.base_job:
+  tags:
+    - docker
+    - worker
+
+lint:
+  extends: .base_job
+  stage: lint
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache make gcc musl-dev lua5.3 lua5.3-dev luarocks5.3 git cargo
+    - luarocks-5.3 install luacheck
+    - cargo install stylua --locked
+    - export PATH="$PATH:$HOME/.cargo/bin"
+  script:
+    - echo "Running linting checks..."
+    - make lint-strict
+    - make check-format
+
+test:
+  extends: .base_job
+  stage: test
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache neovim git make gcc musl-dev lua5.3 lua5.3-dev luarocks5.3
+    - git clone --depth 1 https://github.com/nvim-lua/plenary.nvim.git /tmp/plenary.nvim
+  script:
+    - echo "Running tests..."
+    - make test
