ci(test): export PLENARY_DIR environment variable for testing
  Sets the PLENARY_DIR variable to the cloned plenary.nvim location
  to ensure tests can properly locate the testing framework.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,4 +42,5 @@ test:
     - git clone --depth 1 https://github.com/nvim-lua/plenary.nvim.git /tmp/plenary.nvim
   script:
     - echo "Running tests..."
+    - export PLENARY_DIR=/tmp/plenary.nvim
     - make test
